@@ -30,9 +30,9 @@ AC_DEFUN([ACVT_PLATFORM],
 			linux*)
 				AS_IF([test "$host_cpu" = "ia64" -a -f /etc/sgi-release],
 				[PLATFORM=altix],
-				[AS_IF([test "$host_cpu" = "powerpc64" -a -d /bgl/BlueLight],
+				[AS_IF([test "$host_cpu" = "powerpc64" -a "$host" != "$build" -a -d /bgl/BlueLight],
 				 [PLATFORM=bgl],
-				 [AS_IF([test "$host_cpu" = "powerpc64" -a -d /bgsys],
+				 [AS_IF([test "$host_cpu" = "powerpc64" -a "$host" != "$build" -a -d /bgsys],
 				  [PLATFORM=bgp],
 				  [AS_IF([test "$host_cpu" = "x86_64" -a "x`uname -r | grep -q cray_gem && echo TRUE`" = "xTRUE"],
 				   [PLATFORM=crayxe],
