@@ -2,6 +2,7 @@
 	- updated version of internal OTF to 1.10.1openmpi
 	  (see extlib/otf/ChangeLog)
 	- fixed detection of Open64 compilers for automatic instrumentation
+	- fixed platform detection on BlueGene when configuring for the frontend
 	- fixed build issues on MacOS using GCC v4.2
 	- fixed non-increasing timestamps when flushing the trace buffer
 	- fixed a bug in the MPI wrapper functions MPI_Gatherv and MPI_Scatterv
